cli/tests/testdata/test/markdown_full_block_names.out
Check [WILDCARD]/test/markdown_full_block_names.md$11-14.js
Check [WILDCARD]/test/markdown_full_block_names.md$17-20.ts
Check [WILDCARD]/test/markdown_full_block_names.md$29-32.ts
error: TS2322 [ERROR]: Type 'number' is not assignable to type 'string'.
const a: string = 42;
      ^
    at [WILDCARD]/test/markdown_full_block_names.md$29-32.ts:1:7
